Wed Feb 14 09:10:27 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,backends/Makefile,backends/Makefile.am,
	  backends/Makefile.mk,backends/flint/Makefile,
	  backends/flint/Makefile.am,backends/flint/Makefile.mk,
	  backends/inmemory/Makefile,backends/inmemory/Makefile.am,
	  backends/inmemory/Makefile.mk,backends/multi/Makefile,
	  backends/multi/Makefile.am,backends/multi/Makefile.mk,
	  backends/quartz/Makefile,backends/quartz/Makefile.am,
	  backends/quartz/Makefile.mk,backends/remote/Makefile,
	  backends/remote/Makefile.am,backends/remote/Makefile.mk,
	  configure.ac: Convert backends subdirectory (and subdirectories
	  thereof) to non-recursive make.

Wed Feb 14 08:49:02 GMT 2007  Olly Betts <olly@survex.com>

	* preautoreconf: Fix handling of backslash at the end of a line in
	  included files.
	* preautoreconf: Our handling of which directory a nested include is
	  sought from is consistent with automake, so remove the FIXME comment
	  about it.

Wed Feb 14 08:07:07 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,matcher/Makefile,matcher/Makefile.am,
	  matcher/Makefile.mk: Convert matcher subdirectory to non-recursive
	  make.

Wed Feb 14 07:50:19 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,api/Makefile,api/Makefile.am,api/Makefile.mk,
	  configure.ac: Convert api subdirectory to non-recursive make.

Wed Feb 14 07:48:45 GMT 2007  Olly Betts <olly@survex.com>

	* preautoreconf: No need to `chdir' to the current directory.
	* preautoreconf: Don't bother looking at the file we generate
	  when considering included files.
	* preautoreconf: Add included files to the dependency list.

Wed Feb 14 07:38:19 GMT 2007  Olly Betts <olly@survex.com>

	* preautoreconf: Generate dummy rules for the files which
	  preautoreconf depends on, so that "make" still works if one
	  of them is removed (by build system restructuring).

Wed Feb 14 07:24:07 GMT 2007  Olly Betts <olly@survex.com>
