@@ -1,10 +1,0 @@
-## Process this file with automake to produce Makefile.in
-
-INCLUDES = -I$(top_srcdir)/common -I$(top_srcdir)/include
-
-noinst_LTLIBRARIES = libnet.la
-
-libnet_la_SOURCES = remoteconnection.cc serialise.cc \
-		    progclient.cc \
-		    tcpclient.cc \
-		    remoteserver.cc tcpserver.cc
