@@ -1,3 +1,11 @@
+Wed Feb 14 10:07:14 GMT 2007  Olly Betts <olly@survex.com>
+
+	* Makefile.am,configure.ac,net/Makefile,net/Makefile.am,
+	  net/Makefile.mk: Convert net subdirectory to use non-recursive make.
+	  Now libxapian.la is built completely non-recursively.
+	* docs/Makefile.am,docs/mkdoc.pl: Fix mkdoc.pl to handle directories
+	  which use non-recursive make.
+
 Wed Feb 14 09:10:27 GMT 2007  Olly Betts <olly@survex.com>
 
 	* Makefile.am,backends/Makefile,backends/Makefile.am,
